postgreじゃなくてMysql+rubyバージョンも変更

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,16 +1,13 @@
-# syntax=docker/dockerfile:1
-FROM ruby:3.0
-RUN apt-get update -qq && apt-get install -y nodejs postgresql-client
+FROM ruby:alpine3.13
+RUN apk update \
+      && apk add --no-cache gcc make libc-dev g++ mariadb-dev tzdata nodejs~=14 yarn
 WORKDIR /myapp
-COPY Gemfile /myapp/Gemfile
-COPY Gemfile.lock /myapp/Gemfile.lock
-RUN bundle install
-
-# Add a script to be executed every time the container starts.
+COPY Gemfile .
+COPY Gemfile.lock .
+RUN bundle install --jobs=2
+COPY . /myapp
 COPY entrypoint.sh /usr/bin/
 RUN chmod +x /usr/bin/entrypoint.sh
 ENTRYPOINT ["entrypoint.sh"]
 EXPOSE 3000
-
-# Configure the main process to run when running the image
-CMD ["rails", "server", "-b", "0.0.0.0"]
+CMD ["bundle", "exec", "rails", "server", "-b", "0.0.0.0"]
