src dirに作れなかった原因はこれ?

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: ./src
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3001 -b '0.0.0.0'"
     volumes:
-      - .:/myapp
+      - ./src:/myapp
     ports:
       - "3001:53001"
     env_file:
