全部コミット１

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,6 @@
 version: '3.9'
 
 services:
-  rails:
-    container_name: rails
-    build: ./src
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3001 -b '0.0.0.0'"
-    volumes:
-      - ./src:/myapp
-    ports:
-      - "3001:53001"
-    env_file:
-      - .env      
-    depends_on:
-      - mysqldb
-
   mysqldb:
     image: mysql:5.7
     container_name: mysqldb
@@ -30,3 +17,13 @@ services:
     - ./docker/db/sql:/docker-entrypoint-initdb.d
     ports:
     - 53306:3306
+  rails:
+    build: .
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3001 -b '0.0.0.0'"
+    volumes:
+      - .:/myapp
+    ports:
+      - "3001:53001"
+    depends_on:
+    - mysqldb
+  
